# nerc-rates

./: README.md  pyproject.toml  rates.yaml  setup.cfg
.github/workflows/: unit-test.yaml  validate-rates.yaml
src/nerc_rates/: __init__.py  models.py  rates.py
src/nerc_rates/cmd/: validate_rates_file.py
src/nerc_rates/tests/: test_rates.py
