[metadata]
name = nerc_rates
version = 0.1
author = MOC Alliance
author_email = contact@massopen.cloud
description = Rates and invoicing configuration for the NERC
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml
    requests
